# azure-rust-lab

./: .gitignore  README.md
archived/check-azure-vm/: .env  Cargo.toml  azure-vm-status.json
archived/check-azure-vm/src/: main.rs
archived/create-azure-vm/: Cargo.toml
archived/list-azure-vm/: Cargo.toml
archived/list-azure-vm/src/: main.rs
check-azure-vm/: .env  README.md
check-azure-vm/src/: main.rs
lab-1-guessing-game/: Cargo.toml
lab-1-guessing-game/src/: main.rs
lab-azure-create-1-vm/: Cargo.toml
lab-azure-create-1-vm-0-19/: Cargo.toml
lab-azure-create-1-vm-0-19/output/: FIXED-PUT-1-VM-0.19.0.txt  PUT-1-VM-0.19.0.txt
lab-azure-create-1-vm-0-19/src/: main.rs
lab-azure-create-1-vm/output/: PUT-1-VM.txt
lab-azure-create-1-vm/src/: main.rs
lab-azure-list-vm/: Cargo.toml
lab-azure-list-vm/src/: main.rs
list-azure-vm/src/: check_provioningstat.rs  vm_list.rs
