[package]
name = "lab-azure-list-vm"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_mgmt_compute = "^0.20.0"
azure_identity  = "^0.20.0"
futures = "^0.3"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
azure_core = "^0.20.0"
