[package]
name = "check-azure-vm"
version = "0.1.0"
authors = ["phil.huang@microsoft.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# json-query = "0.3.1"
# jq-rs = "0.4.1"
# jq-sys = "0.2.2"