[package]
name = "list-azure-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_mgmt_compute="0.19.0"
azure_identity="0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.3"
futures = "0.3"
time = "0.3"
log = "0.4"
once_cell = "1.18"
futures-util = "0.3.30"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }